--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Scraper</title>
+    <title>Job Pulse</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Job Scraper</h1>
+    <h1>Job Pulse</h1>
     <form method="post">
         <label for="keyword">Enter keyword:</label>
         <input type="text" id="keyword" name="keyword" required>
