--- a/static/style.css
+++ b/static/style.css
@@ -100,3 +100,9 @@ table tbody tr:nth-child(even) {
 table tbody tr:hover {
     background-color: #e8e8e8;
 }
+
+#loadingIndicator {
+    margin-top: 20px;
+    font-weight: bold;
+    color: #3498db;
+}
